# Economics_CobbDouglas

./: .gitignore  EconomicGrowth - Copy.ipynb  EconomicGrowth.ipynb  README.md  fixed_interactive_widgets.py  main.py  pyproject.toml  requirements.txt  test_environment.py
config/: default_parameters.yaml
data/: README.md
docs/: api_reference.md
src/economics_cobb_douglas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/economics_models/: __init__.py  core.py  visualization.py
tests/: __init__.py  test_core.py
